url-shortener-1/kubernetes/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30000
  type: LoadBalancer  # Changed from NodePort to LoadBalancer
